--- a/phpHolstedMetrics/CMakeLists.txt
+++ b/phpHolstedMetrics/CMakeLists.txt
@@ -41,6 +41,7 @@ else()
         add_executable(phpHolstedMetrics
             ${PROJECT_SOURCES}
             parse_file.h parse_file.cpp
+            displayer.h displayer.cpp
         )
     endif()
 endif()
